<resources>
    <string name="app_name">124</string>
<!--Buttons-->
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_00">00</string>
    <string name="_add">+</string>
    <string name="_subtract">-</string>
    <string name="_multiply">*</string>
    <string name="_divide">/</string>
    <string name="_decimal">,</string>
    <string name="_clear">C</string>
    <string name="_equals">=</string>
    <string name="_percent">%</string>
    <string name="_del">⇐</string>



<!--TEXT-->
    <string name="_result"></string>
    <string name="_preview"></string>
    <string name="_symbol"></string>

</resources>